# Dots

./: .gitignore  .gitmodules  Makefile  README.md  TODO.txt  coc-settings.json  init.lua  init.vim
.xinitrc/: .xinitrc
Vieb/Vieb/: viebrc
alacritty/: alacritty.yml
alacritty/alacritty/: alacritty.yml
betterlockscreenrc/: betterlockscreenrc
btop/btop/: btop.conf
config/: general.vim
config/FM/: fff.vim  fileStorm.vim  fzfz.vim  keymaps.vim  splitControl.vim  start-screan.vim
config/language_support/: cmake-config.vim  coc-config.vim  cpp-config.vim  lsp-config.lua  spelling.vim  treesitter-config.lua
config/themes/: icons.vim  rainbowBraket.vim  theme.vim
dunst/dunst/: dunstrc
fish/: README.md  config.fish
fish/fish/: config.fish
fontconfig/fontconfig/: fonts.conf
git/xmonad-bin/: stack.yaml
i3/i3/: config
kitty/kitty/: kitty.conf
lua/: general.lua  plugins.lua  short.lua
lua/FM/: barbar.lua  bufferline-conf.lua  fff.lua  fileStorm.lua  fzfz.lua  keymaps.lua  status-line.lua  (+4 more)
nvim/: README.md  init.lua
plugin/: packer_compiled.lua
programs/dwm/: .gitignore  CMakeLists.txt  config.def.h  config.h  drw.c  dwm  dwm.c  run.sh  xinitrc
programs/dwm/Patches/: dwm-statusallmons-6.2.diff
programs/dwm/inc/: config.def.h
programs/dwm/scripts/: autostart.sh  autostart_once.sh
programs/dwm/test/: run.sh  xinitrc
ranger/: rc.conf
session/: Train
setup/: packages.txt  pkglist.txt  setup.sh
spell/: en.utf-8.add  en.utf-8.add.spl
starship/: starship.toml
starship-conf/: starship.toml
xinitrc/: .xinitrc
xinitrc-conf/: .xinitrc
(+230 files in other folders)
